<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>de.team33</groupId>
        <artifactId>mvn-config-alpha</artifactId>
        <version>2.0.2</version>
    </parent>

    <groupId>de.team33.cmd.files</groupId>
    <artifactId>files-root</artifactId>
    <version>3.2.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>CMD Files Root</name>
    <description>A command line tool to perform various tasks on the file system - root module.</description>
    <url>https://github.com/akk-team33/cmd-files</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Andreas Kluge-Kaindl</name>
            <email>akk-pg@team33.de</email>
            <organization>team33.de</organization>
            <organizationUrl>https://github.com/akk-team33/</organizationUrl>
        </developer>
    </developers>

    <scm child.scm.connection.inherit.append.path="false"
         child.scm.developerConnection.inherit.append.path="false"
         child.scm.url.inherit.append.path="false">
        <connection>scm:git:git://github.com/akk-team33/cmd-files.git</connection>
        <developerConnection>scm:git:ssh://github.com:akk-team33/cmd-files.git</developerConnection>
        <url>https://github.com/akk-team33/cmd-files</url>
    </scm>

    <properties>
        <!-- preliminary - TODO: move to parent pom ... -->
        <maven.compiler.release>17</maven.compiler.release>

        <copyright.year>2026</copyright.year>
    </properties>

    <modules>
        <module>files-main</module>
        <module>files-fat</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>de.team33.patterns</groupId>
                <artifactId>patterns-bom</artifactId>
                <version>2.6.1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Testing -->
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.9.3</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>de.team33.testing</groupId>
                <artifactId>testing-bom</artifactId>
                <version>1.1.1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
